--- a/views/arts.ejs
+++ b/views/arts.ejs
@@ -18,7 +18,7 @@
     /* margin: -100px; */
 ">Add Art</a></div>
      
-
+     <% if(art[0].art.length > 0) { %>
 
         <div class="col-9"> 
            
@@ -110,7 +110,10 @@
             <% }) %>
             
         </div> 
+    <% } else { %>
 
+        <div class="col-9 table-data"> </div>
+    <% } %>
 </body>
 
 <%- include('layouts/footer'); -%>
