--- a/views/pastAuction.ejs
+++ b/views/pastAuction.ejs
@@ -6,7 +6,7 @@
        
     </div>
     
-        
+    <% if(art[0].art.length > 0) { %>
 
         <div class="col-9"> 
            
@@ -87,7 +87,10 @@
             <% }) %>
             
         </div> 
+    <% } else { %>
 
+        <div class="col-9 table-data"> </div>
+    <% } %>
 </body>
 <script>
     function postComment(e,id) {
