--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -94,7 +94,7 @@
                   <ul class="list-group list-group-flush">
                     <li
                       class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                      Products
+                      Item Cost
                       <span>$<%= total %></span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center px-0">
@@ -105,9 +105,7 @@
                       class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                       <div>
                         <strong>Total amount</strong>
-                        <strong>
-                          <p class="mb-0">(including VAT)</p>
-                        </strong>
+                        
                       </div>
                       <span><strong>$<%= total %></strong></span>
                     </li>
@@ -162,23 +160,23 @@
 function purchase(e) {
 
 
-var ToDate = new Date();
-    var form = $(this);
-// var actionUrl = form.attr('action');
+// var ToDate = new Date();
+//     var form = $(this);
+// // var actionUrl = form.attr('action');
 
-$.ajax({
-    type: "POST",
-    url: 'http://localhost:8081/purchase',
-    data : {
+// $.ajax({
+//     type: "POST",
+//     url: 'http://localhost:8081/purchase',
+//     data : {
        
-       // will be accessible in $_POST['data1']
-    },
-    success: function(data)
-    {
-      alert('Art Purchased successfully.'); 
-      window.location.assign('/welcome');
-    }
-});
+//        // will be accessible in $_POST['data1']
+//     },
+//     success: function(data)
+//     {
+//       alert('Art Purchased successfully.'); 
+      window.location.assign('/checkout');
+//     }
+// });
 
 
 
