--- a/views/layouts/innerheader.ejs
+++ b/views/layouts/innerheader.ejs
@@ -49,6 +49,10 @@ margin-top: -44px;
 
             </li>
             <li>
+                <a href="/advertisement-list">My Advertisements</a>
+
+            </li>
+            <li>
                 <a href="/profile">My Profile</a>
             </li>
             <li><a href="/logout">Logout</a></li>
