--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -85,6 +85,7 @@
               </div>
              
             </div>
+            <% if (cartLength > 0) { %>
             <div class="col-md-4">
               <div class="card mb-4">
                 <div class="card-header py-3">
@@ -94,20 +95,24 @@
                   <ul class="list-group list-group-flush">
                     <li
                       class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                      Item Cost
-                      <span>$<%= total %></span>
+                      Item Cost($)
+                      <span id="cost"><%= total %></span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                      Shipping
-                      <span>$0</span>
+                      Shipping($)
+                      <span>10</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                      Tax(10%)($)
+                      <span id="percent"></span>
                     </li>
                     <li
                       class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                       <div>
-                        <strong>Total amount</strong>
+                        <strong>Total amount($)</strong>
                         
                       </div>
-                      <span><strong>$<%= total %></strong></span>
+                      <span><strong id="total"><%= total %></strong></span>
                     </li>
                   </ul>
                   <% if (cartLength > 0) { %>
@@ -118,12 +123,25 @@
                 </div>
               </div>
             </div>
+            <% } %>
+
           </div>
         </div>
       </section>
 
       <script type="text/javascript">
         function dateCheck() {
+
+          var cost = document.getElementById('cost').innerHTML
+          var per = document.getElementById('percent').innerHTML
+
+          var percent = (parseFloat(cost)/100) * 10;
+          document.getElementById('percent').innerHTML = percent;
+
+          var total = parseFloat(cost) + 10 + parseFloat(percent);
+
+          document.getElementById('total').innerHTML = total;
+
             var ToDate = new Date();
             var UserDate = document.getElementById("userdate").value;
             var logged_in = document.getElementById("logged_in").value;
