--- a/views/arts.ejs
+++ b/views/arts.ejs
@@ -94,15 +94,14 @@
                     </span> 
                     <span> 
                         <p class="message"> 
-                        
-                        <b>Start Date & Time:</b> <%= product.start_date %> <%= product.start_time %>
+                        <b>Start Date & Time:</b> <%= moment(product.start_date).format('DD-MM-YYYY') %>  <%= product.start_time %>
                         </p> 
                     </span> 
                     <span> 
                         <p class="message"> 
-                        <b>End Date & Time:</b> <%= product.end_date %> <%= product.end_time %>
+                        <b>End Date & Time:</b> <%= moment(product.end_date).format('DD-MM-YYYY') %>  <%= product.end_time %>
                         </p> 
-                    </span> 
+                    </span>  
                   
                 </div> 
             </div> <br><br>
