--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -18,7 +18,7 @@
 
                             <h4 class="mb-3">Billing Address</h4>
                         <!-- Single item -->
-                        <form class="needs-validation" novalidate="">
+                        <form method="post" action="/purchase" class="needs-validation" novalidate="">
                             <div class="row">
                                 <div class="col-md-6 mb-3">
                                     <label for="firstName">First name</label>
@@ -122,7 +122,7 @@
                                 </div>
                             </div> -->
                             <hr class="mb-4">
-                            <button class="btn btn-primary btn-lg btn-block" type="submit">Buy Now</button>
+                            <button class="btn btn-primary btn-lg btn-block" type="submit" onclick="validateForm()">Buy Now</button>
                         </form>
                         <!-- Single item -->
             
@@ -170,57 +170,28 @@
 </body>
 
 <script>
-    function purchase(e) {
-
-
-var ToDate = new Date();
-    var form = $(this);
-// var actionUrl = form.attr('action');
-
-$.ajax({
-    type: "POST",
-    url: 'http://localhost:8081/purchase',
-    data : {
-       
-       // will be accessible in $_POST['data1']
-    },
-    success: function(data)
-    {
-      alert('Art Purchased successfully.'); 
-      window.location.assign('/welcome');
-    }
-});
-
-
-
-}
-
-(function () {
-  'use strict'
-
-  window.addEventListener('load', function () {
-    // Fetch all the forms we want to apply custom Bootstrap validation styles to
-    var forms = document.getElementsByClassName('needs-validation')
-
-    // Loop over them and prevent submission
-    Array.prototype.filter.call(forms, function (form) {
-      form.addEventListener('submit', function (event) {
-        if (form.checkValidity() === false) {
-
-            console.log('hjjkjkk');
-          event.preventDefault()
-          event.stopPropagation()
-
-        }else{
-
-          purchase().then(alert('Art Purchased successfully.'))
-
-        }
-        form.classList.add('was-validated')
-      }, false)
-    })
-  }, false)
-}())
+    function validateForm() {
+        'use strict'
+        var forms = document.getElementsByClassName('needs-validation')
+        let vaClass = true;
+        Array.prototype.filter.call(forms, function (form) {
+            console.log(form,'hddg',form.checkValidity());
+            form.addEventListener('submit', function (event) {
+                console.log(form.checkValidity(),form);
+                if (form.checkValidity() === false) {
+                    vaClass = false;
+                    event.preventDefault()
+                    event.stopPropagation()
+                }else{
+                    vaClass = true;
+                }
+                form.classList.add('was-validated')
+                if(vaClass){
+                    form.submit();
+                }
+            })
+        })
+  }
 </script>
 
 <%- include('layouts/footer'); -%>
