--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,9 @@
 <%- include('layouts/innerheader'); -%>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script>
+    import moment from 'moment';
 
+</script>
 <body>
     <div style="height: 50px;">
        
@@ -70,13 +73,12 @@
                     </span> 
                     <span> 
                         <p class="message"> 
-                        
-                        <b>Start Date & Time:</b> <%= product.start_date %> <%= product.start_time %>
+                        <b>Start Date & Time:</b> <%= moment(product.start_date).format('DD-MM-YYYY') %>  <%= product.start_time %>
                         </p> 
                     </span> 
                     <span> 
                         <p class="message"> 
-                        <b>End Date & Time:</b> <%= product.end_date %> <%= product.end_time %>
+                        <b>End Date & Time:</b> <%= moment(product.end_date).format('DD-MM-YYYY') %>  <%= product.end_time %>
                         </p> 
                     </span> 
                     <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" onclick="openModel('<%= product._id %>')">View all comments</button>
@@ -138,7 +140,19 @@
           
 </body>
 <script>
-     function openModel(id) {
+    function formatDate(date){
+        // const today = new Date();
+        const yyyy = date.getFullYear();
+        let mm = date.getMonth() + 1; // Months start at 0!
+        let dd = date.getDate();
+
+        if (dd < 10) dd = '0' + dd;
+        if (mm < 10) mm = '0' + mm;
+
+        const formattedToday = dd + '-' + mm + '-' + yyyy;
+        return formattedToday;
+    }
+    function openModel(id) {
         
         $.ajax({
             type: "POST",
