--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -137,32 +137,37 @@
 
                 <div class="col-md-4">
                     <div class="card mb-4">
-                    <div class="card-header py-3">
+                      <div class="card-header py-3">
                         <h5 class="mb-0">Summary</h5>
-                    </div>
-                    <div class="card-body">
+                      </div>
+                      <div class="card-body">
                         <ul class="list-group list-group-flush">
-                        <li
+                          <li
                             class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                            Item Cost
-                            <span>$<%= total %></span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                            Shipping
-                            <span>$0</span>
-                        </li>
-                        <li
+                            Item Cost($)
+                            <span id="cost"><%= total %></span>
+                          </li>
+                          <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                            Shipping($)
+                            <span>10</span>
+                          </li>
+                          <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                            Tax(10%)($)
+                            <span id="percent"></span>
+                          </li>
+                          <li
                             class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                             <div>
-                            <strong>Total amount</strong>
-                            
+                              <strong>Total amount($)</strong>
+                              
                             </div>
-                            <span><strong>$<%= total %></strong></span>
-                        </li>
+                            <span><strong id="total"><%= total %></strong></span>
+                          </li>
                         </ul>
+                       
+                      </div>
                     </div>
-                    </div>
-                </div>
+                  </div>
 
                 </div>
                 </div>
