--- a/views/arts.ejs
+++ b/views/arts.ejs
@@ -1,5 +1,5 @@
 <%- include('layouts/innerheader'); -%>
-
+<flash-messages></flash-messages>
 
 <body>
     <div style="height: 50px;">
@@ -18,10 +18,24 @@
     /* margin: -100px; */
 ">Add Art</a></div>
      
+
      <% if(art[0].art.length > 0) { %>
 
         <div class="col-9"> 
-           
+            <% if (errors[0].msg > 0) { %>
+                <div class="alert alert-danger alert-dismissible">
+                    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                    <%= errors[0] %>
+                    </div>
+                </div>
+            <% } %>
+            <% if (success.length > 0) { %>
+                <div class="alert alert-success alert-dismissible">
+                    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                    <%= success[0] %>
+                    </div>
+                </div>
+            <% } %>
             
         <!-- Code for viewing the Post -->
         <% art[0].art.forEach(product => { %>
