--- a/views/home.ejs
+++ b/views/home.ejs
@@ -101,7 +101,7 @@
                             <span role="alert" class="requiredError" aria-hidden="true">
                                 Please enter Comment
                             </span><br>
-                            <span role="alert" class="commentSuccess" aria-hidden1="true">
+                            <span role="alert" class="commentBidSuccess" aria-hidden1="true">
                                Comment posted successfully
                             </span><br>
                         <button class="btn btn-danger" style="background-color: #bd2130;" onclick="postComment(event,'<%= key %>')">Post</a> 
@@ -198,7 +198,7 @@
                 {
                     document.getElementsByClassName("commentId")[key].value = "";
                     const userNameField = document.getElementsByClassName("inputSuccess");
-                    const showRequiredSuccess = document.getElementsByClassName("commentSuccess");
+                    const showRequiredSuccess = document.getElementsByClassName("commentBidSuccess");
                     // console.log(showRequiredSuccess,!userNameField[key],key)
                     showRequiredSuccess[key].classList.add("visible");
                     userNameField[key].classList.add("invalid");
